examples/good/09-03-overriding-and-static-binding.elina
var x: int = 3;

fn f(): void {
  printInt(x);
  var x: string = "Hello, world!";
  printString(x);
}

fn main(): void {
  var x: int = 15;
  f();
  printInt(x);
}