examples/bad/add-wrong-types.elina
fn main(): void {
  var x: int = 5;
  var y: string = "Hello";
  var z: int = x + y;
}